--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#2e2e2e" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#e0e0e0" media="(prefers-color-scheme: light)">
     <title>darqueos</title>
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: #fff;
             color: #000;
             font-family: 'Unica One', sans-serif;
             display: flex;
@@ -22,6 +22,18 @@
             font-size: 48px;
             text-transform: lowercase;
             margin: 0;
+        }
+        @media (prefers-color-scheme: light) {
+            body {
+                background-color: #e0e0e0; /* Light gray */
+                color: #000000; /* Dark text for contrast */
+            }
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #2e2e2e; /* Dark gray */
+                color: #ffffff; /* Light text for contrast */
+            }
         }
     </style>
 </head>
